fixed the location crowding problem on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -189,6 +189,7 @@ body {
     line-height: 25px;
     font-size: 12px;
     color: rgb(249, 246, 246);
+    border: 0px solid black;
 }
 
 /*----------------------------Style for submit and textbox-----------------------------------*/
@@ -208,42 +209,6 @@ body {
     border-top-right-radius: 10px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3);
 }
-#location:focus {
-    outline: none;
-}
-
-input[type="search"]{
-    border: 0px solid rgb(251, 249, 249);
-    background-color: rgb(175, 175, 175);
-    border-right: 0px solid rgb(249, 249, 249);
-    border-bottom: 0px solid rgb(249, 249, 249);
-    width: 150px;
-    color: rgb(31, 30, 30);
-    padding-left: 5px;
-    font-size: 14px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-    border-radius: 5px;
-    height: 25px;
-}
-
-#submit {
-    border: 0px solid rgb(247, 247, 247);
-    border-radius: 5px;
-    background-color: rgb(175, 175, 175);
-    margin-left: 0px;
-    margin-right: 10px;
-    height: 25px;
-}
-
-#submit:hover {
-    color: white;
-    cursor: pointer;
-}
-#submit:active {
-    color: black;
-}
-/*--------------------------------------------------------*/
 
 
 .level-mid {
@@ -657,6 +622,20 @@ input[type="search"]{
         }
         .centered-container {
             height: 2050px;
+        }
+
+        .search {
+            flex-direction:column;
+            justify-content:center;
+            align-items: flex-end;
+            gap: 10px;
+        }
+        .search:nth-child(1) {
+            justify-content:flex-start;
+        } 
+        .location {
+            margin: 0px;
+            margin-right: 15px;
         }
                 
 }
